--- a/Packages/ja.enonyauta.alt.gatosyocora.vrcavatareditor/package.json
+++ b/Packages/ja.enonyauta.alt.gatosyocora.vrcavatareditor/package.json
@@ -5,7 +5,7 @@
   "unity": "2022.3",
   "description": "VRC Avatar support editor extension.",
   "author": {
-    "name": "enonyauta",
-    "url": "https://yautaenon.github.io"
+    "name": "がとーしょこら",
+    "url": "https://x.com/gatosyocora"
   }
 }
