--- a/Packages/ja.enonyauta.alt.gatosyocora.vrcavatareditor/package.json
+++ b/Packages/ja.enonyauta.alt.gatosyocora.vrcavatareditor/package.json
@@ -7,5 +7,8 @@
   "author": {
     "name": "がとーしょこら",
     "url": "https://x.com/gatosyocora"
+  },
+  "vpmDependencies": {
+    "com.vrchat.avatars": ">=3.7.5"
   }
 }
